# So_long

./: .so_long.h.swp  CMakeLists.txt  Makefile  actions.c  actions_utils.c  animation.c  clean.c  e.ber  error.c  errors.c  game_end.c  game_utils.c  get_next_line.c  image.c  init.c  libft.c  map.ber  map.c  map_checks.c  map_checks2.c  p.ber  sl.ber  slb.ber  so_long  so_long.c  so_long.h  so_long_bonus  so_long_bonus.h
as/: 00.xpm  01.xpm  01_l.xpm  02.xpm  03.xpm  03_l.xpm  04_l.xpm  05.xpm  05_l.xpm  backg.xpm  background.xpm  cabbage.xpm  doll.xpm  exit_c1.xpm  fence.xpm  girl.xpm  lipstick.xpm  mashroom.xpm  obstacle.xpm
assets/: 00.xpm  00_l.xpm  00_r.xpm  01.xpm  01_l.xpm  02.xpm  02_l.xpm  03.xpm  03_l.xpm  04.xpm  04_l.xpm  05.xpm  05_l.xpm  background.xpm  background1.xpm  cabbage.xpm  collectible.xpm  door_c.xpm  door_o.xpm  exit_c.xpm  exit_o.xpm  fence.xpm  game_over.xpm  game_win.xpm  grass.xpm  lipstick.xpm  mushroom.xpm  watermelon.xpm  watermelon1.xpm
hdr/: so_long.h  so_long_bonus.h
images/: 00.xpm  00_l.xpm  01.xpm  02.xpm  02_l.xpm  03.xpm  04.xpm  05.xpm  fence_1.xpm
new_images/: 00.xpm  00_l.xpm  01.xpm  01_l.xpm  02.xpm  02_l.xpm  03.xpm  03_l.xpm  04.xpm  04_l.xpm  05.xpm  05_l.xpm  cabbage.xpm  exit_c.xpm  exit_o.xpm  fence  grass.xpm  mushroom.xpm
src/: actions.c  actions_utils.c  animation.c  clean.c  error.c  game_end.c  game_utils.c  get_next_line.c  image.c  init.c  libft.c  map.c  map_checks.c  map_checks2.c  so_long.c
src_bonus/: actions_bonus.c  actions_utils_bonus.c  animation_bonus.c  change_b.c  change_img.c  clean_bonus.c  enemy.c  error_bonus.c  game_end_bonus.c  game_utils_bonus.c  get_next_line_bonus.c  image_bonus.c  init_bonus.c  libft_b.c  libft_bonus.c  map_bonus.c  map_checks2_bonus.c  map_checks_bonus.c  so_long_bonus.c
